bindings/go/ffi/slatedb.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
int32_t ffi_slatedb_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_slatedb_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_slatedb_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_slatedb_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_slatedb_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_pointer(uint64_t handle
);
void* ffi_slatedb_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_slatedb_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);
void ffi_slatedb_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_slatedb_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_free_void(uint64_t handle
);
void ffi_slatedb_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);
uint16_t uniffi_slatedb_ffi_checksum_func_ffi_init_logging(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_begin(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_delete(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_delete_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_flush(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_flush_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_merge(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_merge_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_metrics(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_put(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_put_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_scan_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_shutdown(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_snapshot(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_status(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_write(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidb_write_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_build(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_db_cache_disabled(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_merge_operator(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_seed(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_settings(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_sst_block_size(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_wal_object_store(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbiterator_next(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbiterator_seek(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_get(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_get_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_scan(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix_with_options(void
    
);
uint16_t uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_with_options(void
    
);