bindings/python/src/slatedb/ffi/slatedb.py

_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_u64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u64.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u64.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_u64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_i64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i64.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i64.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_f32.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_f32.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_f64.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_f64.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_pointer.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_pointer.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_pointer.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_rust_buffer.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_rust_buffer.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slatedb_ffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_void.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_free_void.argtypes = (ctypes.c_uint64,)
_UniffiLib.ffi_slatedb_ffi_rust_future_free_void.restype = None
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slatedb_ffi_rust_future_complete_void.restype = None
_UniffiLib.uniffi_slatedb_ffi_checksum_func_ffi_init_logging.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_func_ffi_init_logging.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_begin.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_begin.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_delete.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_delete.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_delete_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_delete_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_flush.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_flush.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_flush_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_flush_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get_key_value_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_get_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_merge.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_merge.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_merge_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_merge_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_metrics.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_metrics.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_put.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_put.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_put_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_put_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan_prefix_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_scan_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_shutdown.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_snapshot.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_snapshot.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_status.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_status.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_write.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_write.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_write_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidb_write_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_build.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_build.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_db_cache_disabled.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_db_cache_disabled.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_merge_operator.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_merge_operator.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_seed.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_seed.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_settings.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_settings.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_sst_block_size.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_sst_block_size.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_wal_object_store.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_wal_object_store.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbiterator_next.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbiterator_next.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbiterator_seek.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbiterator_seek.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_get.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_get.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_get_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_get_with_options.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix.restype = ctypes.c_uint16
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix_with_options.restype = (
    ctypes.c_uint16
)
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_with_options.argtypes = ()
_UniffiLib.uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_with_options.restype = (
